fixed HttpHandler  Exception